=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.96

   * new settings: auto_classify_atoms, selection operators:
     polymer, solvent, organic, inorganic

   * transparency_mode now subordinates backface_cull and 
     two_sided_lighting in OpenGL and the ray tracer

   * seq_view settings

   * sequence viewer is now "in"

   * mouse_selection_mode setting

   * got real busy on the sequence viewer

   * created plugin menu

   * further menu consolidation to make room for plugin menus

   * fixed "use display lists" menu option

   * fixed "stereo swap" and Display->Stereo->Swap Sides menu item.

   * ray_transparency contrast back to default of 1.0 default (WYSIWYG).

   * fixed a few minor bugs with picked atom selection indices

   * menus now stay without mouse being held down (what an improvement!)

   * fixed a couple of scroll-bar glitches

   -- beta 5

   * movie.sweep convenience function for simple back & forth movies

   * PyMOL can now write multi-model PDB files (save with state=-2)
   
   * atoms with the name resi, but not the same resn are now considered
     to be in different residues (fixed byres bugs).

   * ray_transparency_contrast setting, default=2.0, improves contrast
     of the transparent surface relative to objects inside.  

   * set_name command

   * fixed save_session behavior to avoid accidental overwrites after
     opening a new session (mac & tcl GUIs)

   * active_selections setting & changes to the selection paradigm 
     in preparation for the sequence alignment tool : )

   * fixed minor bug in fitting code (faster convergence?)

   * added surface_trim_factor and surface_trim_factor settings
     in order to hard-to-tesselate peaks on the surface

   * taught PyMOL bond valences for G,A,T,C,U residues

   * greatly improved quality of the surface rendering algorithm for